# blazingmq

docker/: build_deps.sh
src/applications/bmqbrkr/etc/: bmqbrkrcfg.json
src/groups/bmq/bmqa/: bmqa_session.cpp
src/groups/bmq/bmqp/: bmqp_ctrlmsg.xsd  bmqp_ctrlmsg_messages.cpp  bmqp_ctrlmsg_messages.h  bmqp_protocol.h
src/groups/bmq/bmqpi/: bmqpi_dtspan.h
src/groups/mqb/mqba/: mqba_application.cpp  mqba_authenticator.cpp  mqba_authenticator.h  mqba_initialconnectionhandler.cpp  mqba_sessionnegotiator.cpp  mqba_sessionnegotiator.h
src/groups/mqb/mqbauthn/: mqbauthn_authenticationcontroller.cpp
src/groups/mqb/mqbblp/: mqbblp_cluster.cpp  mqbblp_clusterproxy.cpp
src/groups/mqb/mqbcfg/: mqbcfg.xsd  mqbcfg_brokerconfig.cpp  mqbcfg_messages.cpp  mqbcfg_messages.h
src/groups/mqb/mqbcmd/: mqbcmd_commandlist.cpp
src/groups/mqb/mqbmock/: mqbmock_cluster.cpp
src/groups/mqb/mqbnet/: mqbnet_initialconnectioncontext.cpp  mqbnet_initialconnectioncontext.h  mqbnet_tcpsessionfactory.cpp  mqbnet_tcpsessionfactory.h
src/groups/mqb/mqbplug/: mqbplug_pluginmanager.cpp
src/integration-tests/: test_appids.py
src/plugins/bmqauthnbasic/: CMakeLists.txt  bmqauthnbasic_basicauthenticator.cpp  bmqauthnbasic_basicauthenticator.h  bmqauthnbasic_entry.cpp
src/python/blazingmq/dev/it/tweaks/: generated.py
src/python/blazingmq/schemas/: mqbcfg.py
